# Agent-ZeroGravity

./: .gitignore  .lfsconfig  Antigravity.code-workspace  MORNING_REPORT_2026-03-05.md  README.md  THE_NIGHT_WATCH.md  export_code.py  export_sonic_v2.py  export_sonic_v2_ai_studio.py  kimi_code_submission.txt  kimi_doc_temp.txt  mcp config.json  start_agent_zero.bat  start_agent_zero.vbs  start_night_watch.bat  voice_bypass.py  watchdog.bat
.agent/rules/: SECURITY.md
.agent/skills/: README.md  awesome-skills
.agent/workflows/: pr-first.md  update-index.md
.github/workflows/: deploy.yml
agents/: ZERO.md
comms/: dispatch.py  mailbox.json
dashboard/: index.html  main.js  package.json  style.css
google_ai_studio_sonic_export/: ai_studio_prompt.txt  sonic_reader_v2_full_codebase.txt
kimi_sonic_export/: 00_index.txt  01_chunk.txt  02_chunk.txt  03_chunk.txt  04_chunk.txt  05_chunk.txt  06_chunk.txt  07_chunk.txt  08_chunk.txt  09_chunk.txt  10_chunk.txt  11_chunk.txt  12_chunk.txt  13_chunk.txt  14_chunk.txt  15_chunk.txt  16_chunk.txt  17_chunk.txt  18_chunk.txt
ops/: night_watch_heartbeat.py
ops/morning-report/: report-data.json
projects/: README.md
projects/Sonic_Reader/: STATE_OF_THE_UNION.md  discord_patreon_plan.md  implementation_plan.md  saas_website_plan.md
projects/Sonic_Reader/sonic-reader/src-tauri/: Cargo.toml  cargo_errors.txt  cargo_final_check.txt  cargo_out.txt  error_utf8.txt  errors.txt  errors_ascii.txt  errors_build.txt  errors_sync.txt  errors_v3.txt  usage_stats.json
projects/Sonic_Reader/sonic-reader/src-tauri/src/: text_scraper.rs  tts.rs  usage_tracker.rs
projects/Sonic_Reader_Landing/: index.html
projects/Sonic_Reader_V2/: package-lock.json  package.json
reports/: agent_os_report.tex  agent_os_report_final.tex  simple_test.tex
workspace/: .gitignore  GLOSSARY.md  WORKSPACE_INDEX.md  agents.md  audit_todays_work.md  package-lock.json  package.json  scratchpad.md  soul.md  state.json  task.md  user.md
workspace/agents/: CLINE.md  JARVIS.md
workspace/comms/: vortex_state.json
workspace/dashboard/: .gitignore  MorningReport_01.04.26.md  Upgradeplan 01.04.26.md  Upgradeplan_02.04.26_Obsidian_Pivot.md  package-lock.json  vite.config.js
workspace/docs/: MOLTUNI_INTEGRATION.md  phase_4_filesystem_plan.md
workspace/empire-hq/: app.js  (+6 more)
workspace/projects/_archive/Sonic_Reader_V2/src-tauri/: Cargo.toml  tauri.conf.json
workspace/projects/_archive/Sonic_Reader_V2/src-tauri/src/: clipboard_monitor.rs  process_manager.rs  tts.rs
(+497 files in other folders)
