[package]
name = "sonic-reader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sonic_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Windows API for UI Automation and Global Hotkeys
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse"
] }
# Audio Playback
rodio = "0.17"
# Sidecar support / Process management
tokio = { version = "1", features = ["full"] }
uiautomation = "0.24.3"
tempfile = "3.26.0"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-notification = "2"
chrono = "0.4.44"
rdev = "0.5.3"
lazy_static = "1.5.0"
crossbeam-channel = "0.5.15"

