[package]
name = "sonic-reader-v2"
version = "2.0.0"
description = "High-performance screen reader with native accessibility bridge."
authors = ["Stephan M"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [ "devtools"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_Accessibility"
] }
uiautomation = "0.12"
tts = "0.26"
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"
rodio = "0.17"
tempfile = "3.8"

[lib]
name = "sonic_reader_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sonic-reader-v2"
path = "src/main.rs"
